refactor + bug fixing